--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -36,17 +36,19 @@ jobs:
       # Menyertakannya di 'env' untuk Platane/snk seringkali tidak diperlukan,
       # namun tidak masalah jika ada. Yang penting adalah token untuk langkah deploy.
       - name: 🐍 Generate GitHub Contributions Snake
-        uses: Platane/snk/svg-only@v3
+        uses: Platane/snk@v3
         with:
           # Nama pengguna GitHub (otomatis diambil dari pemilik repositori)
           github_user_name: ${{ github.repository_owner }}
-          # Daftar file output yang akan dihasilkan
+          # Daftar file output yang akan dihasilkan di dalam direktori 'dist'
+          # Format nama file dengan parameter query (?palette=github-dark) adalah
+          # cara Platane/snk menerima opsi untuk tiap file output.
           outputs: |
             dist/github-snake.svg
             dist/github-snake-dark.svg?palette=github-dark
             dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-        # env: # Baris ini bisa diaktifkan jika Platane/snk secara spesifik membutuhkan token di env
-        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env: # Baris ini bisa diaktifkan jika Platane/snk secara spesifik membutuhkan token di env
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Langkah 3: Deploy file animasi ke branch 'output'
       # Action ini akan mengambil konten dari 'publish_dir' dan menempatkannya
